백엔드 헬름 차트 values 설정

--- a/backend/values/values-dev.yaml
+++ b/backend/values/values-dev.yaml
@@ -21,4 +21,5 @@ image:
   repository: "harbor.homlab.robinjoon.xyz/growweek/backend"
   tag: "20251226"
 
-imagePullSecrets: "growweek-harbor-secret"
+imagePullSecrets:
+  - "growweek-harbor-secret"
