백엔드 헬름 차트 하버 주소 변경

--- a/backend/values/values-dev.yaml
+++ b/backend/values/values-dev.yaml
@@ -18,7 +18,7 @@ ingress:
         - dev.growweek.robinjoon.xyz
 
 image:
-  repository: "harbor.homlab.robinjoon.xyz/growweek/backend"
+  repository: "harbor.homelab.robinjoon.xyz/growweek/backend"
   tag: "20251226"
 
 imagePullSecrets:
