프론트 헬름 차트

--- a/frontend/values.yaml
+++ b/frontend/values.yaml
@@ -154,6 +154,16 @@ volumeMounts: []
 #   mountPath: "/etc/foo"
 #   readOnly: true
 
+# Environment variables for the container
+env: []
+# - name: MY_ENV_VAR
+#   value: "my-value"
+# - name: SECRET_VAR
+#   valueFrom:
+#     secretKeyRef:
+#       name: my-secret
+#       key: secret-key
+
 nodeSelector: {}
 
 tolerations: []
