--- a/backend/values/values-dev.yaml
+++ b/backend/values/values-dev.yaml
@@ -1,7 +1,7 @@
 nameOverride: "growweek-backend-dev"
 fullnameOverride: "growweek-backend-dev"
 
-replicaCount: 2
+replicaCount: 1
 
 ingress:
   enabled: true
@@ -10,14 +10,14 @@ ingress:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     cert-manager.io/cluster-issuer: letsencrypt-prod
   hosts:
-    - host: dev.growweek.robinjoon.xyz
+    - host: dev.api.growweek.robinjoon.xyz
       paths:
-        - path: /api/
+        - path: /
           pathType: Prefix
   tls:
     - secretName: growweek-backend-dev-tls
       hosts:
-        - dev.growweek.robinjoon.xyz
+        - dev.api.growweek.robinjoon.xyz
 
 image:
   repository: "harbor.homelab.robinjoon.xyz/growweek/backend"
