--- a/backend/values/values-dev.yaml
+++ b/backend/values/values-dev.yaml
@@ -41,3 +41,30 @@ livenessProbe:
 
 service:
   port: 8080
+
+# Environment variables from Secret
+# Secret 생성 방법: backend-secret.yaml 파일 생성 후 적용
+#
+# ---
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: backend-secret
+#   namespace: growweek
+# type: Opaque
+# stringData:
+#   SPRING_PROFILES_ACTIVE: "dev"
+#   DB_HOST: ""
+#   DB_PORT: ""
+#   DB_NAME: ""
+#   DB_USERNAME: ""
+#   DB_PASSWORD: ""
+#   JWT_SECRET: ""
+#   JWT_EXPIRATION: "3600000"
+#   GEMINI_API_KEY: ""
+# ---
+#
+# kubectl apply -f backend-secret.yaml
+envFrom:
+  - secretRef:
+      name: backend-secret
