--- a/frontend/values/values-dev.yaml
+++ b/frontend/values/values-dev.yaml
@@ -21,7 +21,7 @@ ingress:
 
 image:
   repository: "harbor.homelab.robinjoon.xyz/growweek/frontend"
-  tag: "20251229-2"
+  tag: "20260104"
 
 imagePullSecrets:
   - name: "growweek-harbor-secret"
